# phillnet-complete-life-studio

./: .gitignore  LICENSE  README.md  __init__.py  benchmark_text_action.py  life_game_env.py  pyproject.toml  requirements.txt  setup.py  training_utils.py  web_app.py
static/: app.js  style.css
templates/: index.html
